force-app/main/default/objects/Employee__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Account Executive</fullName>
            </value>
            <value>
                <fullName>Assembly Technician</fullName>
            </value>
            <value>
                <fullName>CNC Operator</fullName>
            </value>
            <value>
                <fullName>Electrician</fullName>
            </value>
            <value>
                <fullName>Financial Analyst</fullName>
            </value>
            <value>
                <fullName>Forklift Operator</fullName>
            </value>
            <value>
                <fullName>Grounds Maintenance</fullName>
            </value>
            <value>
                <fullName>Help Desk Technician</fullName>
            </value>
            <value>
                <fullName>HR Generalist</fullName>
            </value>
            <value>
                <fullName>HR Manager</fullName>
            </value>
            <value>
                <fullName>HVAC Technician</fullName>
            </value>
            <value>
                <fullName>Inside Sales Representative</fullName>
            </value>
            <value>
                <fullName>Inventory Specialist</fullName>
            </value>
            <value>
                <fullName>Line Supervisor</fullName>
            </value>
            <value>
                <fullName>Loader</fullName>
            </value>
            <value>
                <fullName>Logistics Coordinator</fullName>
            </value>
            <value>
                <fullName>Machine Operator</fullName>
            </value>
            <value>
                <fullName>Maintenance Supervisor</fullName>
            </value>
            <value>
                <fullName>Maintenance Technician</fullName>
            </value>
            <value>
                <fullName>Network Engineer</fullName>
            </value>
            <value>
                <fullName>Operations Coordinator</fullName>
            </value>
            <value>
                <fullName>Operations Manager</fullName>
            </value>
            <value>
                <fullName>Payroll Specialist</fullName>
            </value>
            <value>
                <fullName>Picker/Packer</fullName>
            </value>
            <value>
                <fullName>Plumber</fullName>
            </value>
            <value>
                <fullName>Process Engineer</fullName>
            </value>
            <value>
                <fullName>Quality Inspector</fullName>
            </value>
            <value>
                <fullName>Receiving Clerk</fullName>
            </value>
            <value>
                <fullName>Recruiter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>